<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/admin_title_user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:width="30dp"
            android:gravity="center_horizontal"
            android:maxWidth="30dp"
            android:minWidth="30dp"
            android:padding="5dp"
            android:text="@string/user_list_title_id"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/admin_title_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:width="100dp"
            android:gravity="center_horizontal"
            android:maxWidth="100dp"
            android:minWidth="100dp"
            android:padding="5dp"
            android:text="@string/user_list_title_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/admin_title_user_statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:text="Statistics"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/admin_title_user_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:width="30dp"
            android:gravity="center_horizontal"
            android:maxWidth="30dp"
            android:minWidth="30dp"
            android:padding="5dp"
            android:text="@string/user_list_title_login"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/new_user_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="New user"
        android:theme="@style/GoodButton" />

    <ListView
        android:id="@+id/list_admin_users"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="false"
        android:layout_marginBottom="45dp"
        android:layout_marginTop="25dp" />

 </RelativeLayout>

